[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-ibis"
authors = [{ name = "Stefan Binder" }]
dependencies = ["dbt-core>=1.5", "ibis-framework[duckdb]>=6", "click"]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license-files = { paths = ["LICENSE"] }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[project.scripts]
dbt-ibis = "dbt_ibis:main"

[project.urls]
Source = "https://github.com/binste/dbt-ibis"

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "black",
    "ipykernel",
    "ipython",
    "ipdb",
    "pytest",
    "pytest-mock",
    "mypy",
    "dbt-duckdb",
    "pandas",
]

[tool.hatch.version]
path = "dbt_ibis/__init__.py"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
linters = [
    "black --diff --color --check .",
    "ruff check .",
    "mypy dbt_ibis tests",
]
tests = ["python -m pytest tests"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | build
  | dist
  | \.venv
  | demo_project
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle-error
    "E",
    # pycodestyle-warning
    "W",
    # pyflakes
    "F",
    # flake8-tidy-imports
    "TID",
    "I",
    "C90",
    "UP",
    "YTT",
    "S",
    "BLE",
    "A",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "PT",
    "RET501",
    "RET502",
    "RET503",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "RUF",
]
ignore = [
    # Rule prefers implicitly concatenated strings over explicitly.
    # We prefer explicitly concatenated strings.
    "ISC003",
    # Explicit conversion flags for strings
    "RUF010",
]
exclude = [".git", "build", "__pycache__", "demo_project"]

[tool.ruff.per-file-ignores]
# Allow assert statements in test files
"tests/**/*.py" = ["S101"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ibis.*", "dbt.*", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
